--- a/WebContent/welcome.html
+++ b/WebContent/welcome.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>GroupTabs Example</title>
+    <title>VerizonHub</title>
     <!-- Ext -->
     <link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all-gray.css">
 
